# new-project

./: .gitignore  timeweb  timeweb.pub
prod/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/: db.sqlite3
prod/mysite/database/: db.sqlite3
prod/mysite/mysite/: settings.py
